--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,9 @@
   ],
   "minimum-stability": "stable",
   "require": {
-    "sinri/ark-core": "~2.0",
-    "phpmailer/phpmailer": "~6.1"
+    "sinri/ark-core": "~2.7",
+    "phpmailer/phpmailer": "~6.5",
+    "php": ">=7.0"
   },
   "autoload": {
     "psr-4": {
